# substrate

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  proposal.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: daemon.rs  main.rs
crates/cycle/: Cargo.toml
crates/cycle/src/: lib.rs
crates/exec/: Cargo.toml
crates/exec/src/: lib.rs
crates/glass/: Cargo.toml
crates/glass/src/: main.rs  theme.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: activity.rs  boundary.rs  candidate.rs  corruption.rs  guard.rs  identity.rs  lib.rs  lineage.rs  loops.rs  mutation.rs  observation.rs  parameters.rs  pattern_memory.rs  presence.rs  question.rs  service.rs  spec.rs  store.rs  thread.rs  tool.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/marble/src/: mac.rs
crates/observatory/: Cargo.toml
crates/observatory/src/: main.rs
crates/sense/: Cargo.toml
crates/sense/src/: lib.rs
crates/vision/: Cargo.toml
crates/vision/src/: lib.rs
data/: README.md
data/sample/: boundary.phase-1.example.json  observations.jsonl
data/schema/: observation.schema.json
docs/: 00-overview.md  01-problem-statement.md  02-research-basis.md  03-system-architecture.md  04-methodology.md  05-validation-and-results.md  06-limitations.md  07-roadmap.md  ARCHITECTURE.md  DEVELOPMENT_LOG.md  HUMANITY.md  SOUL.md  TODO-linux.md  UI-DESIGN-BRIEF.md  assumptions.md  bias-and-limitations.md  boundaries.md  data-model.md  data-sheet.md  design-orientation-and-mesh.md  evaluation-plan.md  human-review-requirements.md  model-card.md  seed.txt
docs/decision-records/: 0001-architecture-decision-template.md  0002-telos-first-refounding.md  0003-rust-for-the-kernel.md  0004-hybrid-kernel-periphery.md  0005-human-owned-capability-boundary.md  0006-observatory-gui-egui.md
examples/: README.md
experiments/experiment-001/: hypothesis.md  method.md  reproducibility.md  results.md
familiar_data/: boundary.json  candidates.jsonl  last_answered.txt  last_theory.txt  loops.jsonl  observations.jsonl  patterns.jsonl  structure.fp  threads.jsonl  trials.jsonl
familiar_data/artifacts/: candidate-0001.sh  candidate-0002.sh  candidate-0003.sh  candidate-0004.sh  candidate-0007.sh
familiar_data/llm/: prompt.txt  response.json
llm/: README.md  call_llm.sh  key.env.example
notebooks/: README.md
packaging/: AppIcon.icns  Info.plist  build-app.sh  build-pkg.sh  make-icns.sh  make-icon.swift
security/: data-classification.md  dependency-review.md  privacy-review.md  sbom.md  threat-model.md
validation/: accuracy-metrics.md  benchmark-results.md  known-failures.md  reproducibility.md  test-plan.md
