[package]
name = "substrate-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The CLI shell for the Substrate factory."

[[bin]]
name = "substrate"
path = "src/main.rs"

[dependencies]
substrate-kernel.workspace = true
substrate-sense.workspace = true
substrate-cycle.workspace = true
substrate-llm.workspace = true
