[package]
name = "familiar-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The CLI shell for the Substrate factory."

[[bin]]
name = "familiar"
path = "src/main.rs"

[dependencies]
familiar-kernel.workspace = true
familiar-sense.workspace = true
familiar-cycle.workspace = true
familiar-llm.workspace = true
