[package]
name = "familiar-cycle"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The metabolism — one tick of the factory cycle (sense → detect → generate → measure)."

[dependencies]
familiar-kernel.workspace = true
familiar-sense.workspace = true
familiar-llm.workspace = true
familiar-exec.workspace = true
serde_json.workspace = true
