[package]
name = "substrate-observatory"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Observatory — a visual window onto the factory (the primary human interface)."

[[bin]]
name = "observatory"
path = "src/main.rs"

[dependencies]
substrate-kernel.workspace = true
eframe = "0.31"
egui = "0.31"
